--- a/index.html
+++ b/index.html
@@ -1,16 +1,166 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="manifest" href="manifest.json">
-  <title>Billing System</title>
-  <script src="app.js"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Invoice App</title>
+  <link rel="manifest" href="manifest.json" />
+  <script>
+    if ("serviceWorker" in navigator) {
+      navigator.serviceWorker.register("service-worker.js");
+    }
+  </script>
+  <style>
+    body { font-family: Arial; padding: 20px; }
+    input, button, table { margin: 5px; }
+  </style>
 </head>
 <body>
-  <!-- Roman Urdu comments -->
-  <!-- Yahan product aur invoice UI render hoga -->
-  <h1>Billing System</h1>
-  <div id="app">Loading...</div>
+
+<h2>Business: <span id="businessName">My Business</span></h2>
+
+<h3>Products</h3>
+<input id="productName" placeholder="Product Name" />
+<input id="productRate" type="number" placeholder="Rate" />
+<button onclick="addProduct()">Add Product</button>
+
+<br>
+<input id="searchProduct" placeholder="Search Product" oninput="renderProducts()" />
+<table border="1" id="productTable"></table>
+
+<hr>
+
+<h3>Create Invoice</h3>
+<input id="invoiceSearch" placeholder="Search Product" oninput="searchForInvoice()" />
+<div id="invoiceSearchResults"></div>
+
+<table border="1" id="invoiceTable"></table>
+
+<p>
+  Discount: <input id="discount" type="number" value="0" oninput="calculateTotal()">
+</p>
+<h3>Total: <span id="total">0</span></h3>
+
+<button onclick="clearBill()">Clear Bill</button>
+<button onclick="downloadPDF()">Export Invoice PDF</button>
+
+<script>
+  let products = JSON.parse(localStorage.getItem("products") || "[]");
+  let invoice = [];
+
+  function saveProducts() {
+    localStorage.setItem("products", JSON.stringify(products));
+  }
+
+  function addProduct() {
+    let name = productName.value.trim();
+    let rate = Number(productRate.value);
+    if (!name || !rate) return;
+
+    products.push({ name, rate });
+    saveProducts();
+    renderProducts();
+  }
+
+  function removeProduct(i) {
+    products.splice(i, 1);
+    saveProducts();
+    renderProducts();
+  }
+
+  function editProduct(i) {
+    let newRate = prompt("New Rate:", products[i].rate);
+    if (newRate) products[i].rate = Number(newRate);
+    saveProducts();
+    renderProducts();
+  }
+
+  function renderProducts() {
+    let q = searchProduct.value.toLowerCase();
+    productTable.innerHTML = `
+      <tr><th>Name</th><th>Rate</th><th>Actions</th></tr>
+      ${products
+        .filter(p => p.name.toLowerCase().includes(q))
+        .map(
+          (p, i) => `
+        <tr>
+          <td>${p.name}</td>
+          <td>${p.rate}</td>
+          <td>
+            <button onclick="editProduct(${i})">Edit</button>
+            <button onclick="removeProduct(${i})">Remove</button>
+          </td>
+        </tr>`
+        )
+        .join("")}
+    `;
+  }
+
+  function searchForInvoice() {
+    let q = invoiceSearch.value.toLowerCase();
+    invoiceSearchResults.innerHTML = products
+      .filter(p => p.name.toLowerCase().includes(q))
+      .map(
+        (p, i) => `<button onclick='addToInvoice("${p.name}", ${p.rate})'>
+          ${p.name} - ${p.rate}
+        </button><br>`
+      )
+      .join("");
+  }
+
+  function addToInvoice(name, rate) {
+    invoice.push({ name, rate, qty: 1 });
+    renderInvoice();
+  }
+
+  function changeQty(i) {
+    invoice[i].qty = Number(prompt("New Qty:", invoice[i].qty));
+    renderInvoice();
+  }
+
+  function removeItem(i) {
+    invoice.splice(i, 1);
+    renderInvoice();
+  }
+
+  function renderInvoice() {
+    invoiceTable.innerHTML = `
+      <tr><th>Name</th><th>Rate</th><th>Qty</th><th>Total</th><th>Actions</th></tr>
+      ${invoice
+        .map(
+          (item, i) => `
+        <tr>
+          <td>${item.name}</td>
+          <td>${item.rate}</td>
+          <td>${item.qty}</td>
+          <td>${item.rate * item.qty}</td>
+          <td>
+            <button onclick="changeQty(${i})">Edit</button>
+            <button onclick="removeItem(${i})">Remove</button>
+          </td>
+        </tr>`
+        )
+        .join("")}
+    `;
+    calculateTotal();
+  }
+
+  function calculateTotal() {
+    let subtotal = invoice.reduce((a, b) => a + b.rate * b.qty, 0);
+    let d = Number(discount.value);
+    total.textContent = subtotal - d;
+  }
+
+  function clearBill() {
+    invoice = [];
+    renderInvoice();
+  }
+
+  function downloadPDF() {
+    window.print(); // Simple export (works on all browsers)
+  }
+
+  renderProducts();
+</script>
 </body>
 </html>
