--- a/index.html
+++ b/index.html
@@ -1,204 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Invoice App</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <!-- Service Worker -->
-  <link rel="manifest" href="manifest.json">
-  <script>
-    if ("serviceWorker" in navigator) {
-      navigator.serviceWorker.register("service-worker.js");
-    }
-  </script>
-
-  <!-- ⭐ PDF Libraries -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.25/jspdf.plugin.autotable.min.js"></script>
-
-  <style>
-    body { font-family: Arial; padding: 20px; }
-    input, button, table { margin: 5px; }
-  </style>
-</head>
-<body>
-
-<h2>Business: <span id="businessName">My Business</span></h2>
-
-<h3>Products</h3>
-<input id="productName" placeholder="Product Name" />
-<input id="productRate" type="number" placeholder="Rate" />
-<button onclick="addProduct()">Add Product</button>
-
-<br>
-<input id="searchProduct" placeholder="Search Product" oninput="renderProducts()" />
-<table border="1" id="productTable"></table>
-
-<hr>
-
-<h3>Create Invoice</h3>
-<input id="invoiceSearch" placeholder="Search Product" oninput="searchForInvoice()" />
-<div id="invoiceSearchResults"></div>
-
-<table border="1" id="invoiceTable"></table>
-
-<p>
-  Discount: <input id="discount" type="number" value="0" oninput="calculateTotal()">
-</p>
-
-<h3>Total: <span id="total">0</span></h3>
-
-<button onclick="clearBill()">Clear Bill</button>
-<button onclick="downloadPDF()">Export Invoice PDF</button>
-
-<script>
-  let products = JSON.parse(localStorage.getItem("products") || "[]");
-  let invoice = [];
-
-  function saveProducts() {
-    localStorage.setItem("products", JSON.stringify(products));
-  }
-
-  function addProduct() {
-    let name = productName.value.trim();
-    let rate = Number(productRate.value);
-    if (!name || !rate) return;
-
-    products.push({ name, rate });
-    saveProducts();
-    renderProducts();
-  }
-
-  function removeProduct(i) {
-    products.splice(i, 1);
-    saveProducts();
-    renderProducts();
-  }
-
-  function editProduct(i) {
-    let newRate = prompt("New Rate:", products[i].rate);
-    if (newRate) products[i].rate = Number(newRate);
-    saveProducts();
-    renderProducts();
-  }
-
-  function renderProducts() {
-    let q = searchProduct.value.toLowerCase();
-    productTable.innerHTML = `
-      <tr><th>Name</th><th>Rate</th><th>Actions</th></tr>
-      ${products
-        .filter(p => p.name.toLowerCase().includes(q))
-        .map(
-          (p, i) => `
-        <tr>
-          <td>${p.name}</td>
-          <td>${p.rate}</td>
-          <td>
-            <button onclick="editProduct(${i})">Edit</button>
-            <button onclick="removeProduct(${i})">Remove</button>
-          </td>
-        </tr>`
-        )
-        .join("")}
-    `;
-  }
-
-  function searchForInvoice() {
-    let q = invoiceSearch.value.toLowerCase();
-    invoiceSearchResults.innerHTML = products
-      .filter(p => p.name.toLowerCase().includes(q))
-      .map(
-        (p, i) => `<button onclick='addToInvoice("${p.name}", ${p.rate})'>
-          ${p.name} - ${p.rate}
-        </button><br>`
-      )
-      .join("");
-  }
-
-  function addToInvoice(name, rate) {
-    invoice.push({ name, rate, qty: 1 });
-    renderInvoice();
-  }
-
-  function changeQty(i) {
-    invoice[i].qty = Number(prompt("New Qty:", invoice[i].qty));
-    renderInvoice();
-  }
-
-  function removeItem(i) {
-    invoice.splice(i, 1);
-    renderInvoice();
-  }
-
-  function renderInvoice() {
-    invoiceTable.innerHTML = `
-      <tr><th>Name</th><th>Rate</th><th>Qty</th><th>Total</th><th>Actions</th></tr>
-      ${invoice
-        .map(
-          (item, i) => `
-        <tr>
-          <td>${item.name}</td>
-          <td>${item.rate}</td>
-          <td>${item.qty}</td>
-          <td>${item.rate * item.qty}</td>
-          <td>
-            <button onclick="changeQty(${i})">Edit</button>
-            <button onclick="removeItem(${i})">Remove</button>
-          </td>
-        </tr>`
-        )
-        .join("")}
-    `;
-    calculateTotal();
-  }
-
-  function calculateTotal() {
-    let subtotal = invoice.reduce((a, b) => a + b.rate * b.qty, 0);
-    let d = Number(discount.value);
-    total.textContent = subtotal - d;
-  }
-
-  function clearBill() {
-    invoice = [];
-    renderInvoice();
-  }
-
-  function downloadPDF() {
-    const { jsPDF } = window.jspdf;
-    const doc = new jsPDF();
-
-    doc.setFontSize(18);
-    doc.text("Invoice", 14, 20);
-
-    const rows = invoice.map(item => [
-      item.name,
-      item.rate,
-      item.qty,
-      item.rate * item.qty
-    ]);
-
-    doc.autoTable({
-      head: [["Product", "Rate", "Qty", "Total"]],
-      body: rows,
-      startY: 30
-    });
-
-    let subtotal = invoice.reduce((a, b) => a + b.rate * b.qty, 0);
-    let d = Number(discount.value);
-    let grand = subtotal - d;
-
-    let y = doc.lastAutoTable.finalY + 10;
-
-    doc.text(`Subtotal: ${subtotal}`, 14, y);
-    doc.text(`Discount: ${d}`, 14, y + 10);
-    doc.text(`Grand Total: ${grand}`, 14, y + 20);
-
-    doc.save("invoice.pdf");
-  }
-
-  renderProducts();
-</script>
-
-</body>
-</html>
+<html><body>Styled Invoice App</body></html>
